# rnw

./: .gitignore  CHEATSHEET.md  DEPENDENCY_GUIDE.md  README.md  VERSION_GUIDE.md  main.py  pyproject.toml  setup_dev.sh
.kiro/specs/python-project-init/: design.md  requirements.md  tasks.md
src/rnw/: __init__.py  calculator.py  document_process.py  document_processor.py  main.py
tests/: __init__.py  test_calculator.py  test_document_process.py
