[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnw"
version = "0.1.0"
description = "A simple Python calculator package for demonstration purposes"
readme = "README.md"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    # Uncomment dependencies as needed:
    # "requests>=2.28.0",        # HTTP library
    # "numpy>=1.21.0",           # Numerical computing  
    # "pandas>=1.3.0",           # Data analysis
    # "click>=8.0.0",            # CLI framework
    # "pydantic>=1.9.0",         # Data validation
    # "python-dateutil>=2.8.0",  # Date utilities
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
web = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]
production = [
    "gunicorn>=20.0.0",
    "psycopg2-binary>=2.9.0",
]
ci = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "codecov>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/example/rnw"
Repository = "https://github.com/example/rnw"
Issues = "https://github.com/example/rnw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true